[package]
name = "hyperbus"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["futures-core/std"]

[dependencies]
futures-core = { version = "0.3.28", default-features = false }
pin-project = "1.1.2"

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = ["futures"] }

[target.'cfg(not(loom))'.dependencies]
atomic-waker = "1.1.1"

[dev-dependencies]
futures = "0.3.28"

[target.'cfg(not(loom))'.dev-dependencies]
tokio = { version = "1.29.1", default-features = false, features = ["rt", "time", "macros"] }
