[package]
name = "hyperbus"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["futures-core/std"]

[dependencies]
crossbeam-utils = { version = "0.8.16", default-features = false }
futures-core = { version = "0.3.28", default-features = false }
pin-project = "1.1.2"

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = ["futures"] }

[target.'cfg(not(loom))'.dependencies]
atomic-waker = "1.1.1"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
crossbeam-channel = "0.5.8"
futures = "0.3.28"
multiqueue = "0.3.2"

# For profiling
[profile.release]
debug = true

[[bench]]
name = "basic"
harness = false

[target.'cfg(not(loom))'.dev-dependencies]
tokio = { version = "1.33.0", default-features = false, features = ["rt", "time", "macros", "sync"] }
